# harem

./: .ansible-lint  .gitignore  .gitmodules  .pre-commit-config.yaml  .rgignore  .yamllint  LICENSE  Makefile  README.md  ansible.cfg  example.ign  galaxy.yml  hosts.ini  requirements.txt  requirements.yml  setup.cfg  setup.py  test-requirements.txt  tox.ini  vagrant.rst
apps/: run-iot  run-nvr  run-unifi
apps/emby/: do  docker-compose.yml
apps/flexget/: Dockerfile  docker-compose.yml
apps/jellyfin/: do  docker-compose.yml
apps/netdata/: deploy
apps/prom/: deploy.yml  docker-compose.yml  logs
apps/rp/: deploy.yml
apps/rss-bot/: README.md  config.yaml  deploy.yml  logs
apps/rss2irc/: docker-compose.yml
apps/skydive/: deploy.yml  logs
apps/synapse/: docker-compose.yml
apps/traefik/: deploy.yml
group_vars/: all.yml  baremetals.yml  etcd.yml
group_vars/all/: all.yml  aws.yml  coreos.yml  datadog.yml  docker.yml  garage.yml  oci.yml  openstack.yml
group_vars/k8s-cluster/: addons.yml  k8s-cluster.yml
host_vars/: apc.yml  esw.yml  n0.yml  n1.yml  n2.yml  n3.yml  smini.yml  switch-gs1910.yml  syno.yml
molecule/default/: destroy.yml  molecule.yml
molecule/foo/: converge.yml  create.yml  (+1 more)
playbooks/: 3oci.yaml  TODO.txt  apps.yml  crons.yml  dns.yml  dockers.yml  dsm.yml  leno.yml  mac.yml  matrix.yml  mon.yml  monitoring.yml  nodes.yml  power-setup.yml  power.yml  q.yml  reprov.yml  run-nvr  run-unifi  run-watchtower.sh  shares.yml  tftp.yml  ups.yml
roles/: ensure-docker  install-docker
templates/: dump-vars.yaml
vms/: Vagrantfile
(+131 files in other folders)
