[metadata]
name = harem
summary = Harem is all about managing your hosts...
description-file =
    README.md
author = Sorin Sbarnea
author-email = sorin.sbarnea@gmail.com
home-page = https://github.com/ssbarnea/harem
classifier =
  License :: OSI Approved :: BSD
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    config = config/*
    playbooks = playbooks/*
    usr/local/share/ansible/roles = roles/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
